[package]
name = "raspi_adc_ir"
version = "0.1.0"
authors = ["Gary <gsuyemoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads1x1x = "0.2"
linux-embedded-hal = "0.3"
embedded-hal = "0.2.4"
nb = "1.0.0"
rust_gpiozero = "0.2.0"
log = "0.4.14"
simplelog = "^0.10.0"
